<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">2048</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="score">score</string>
    <string name="best_score">best</string>
    <string name="current_score">score</string>
    <string name="txt_zero">0</string>
    <string name="txt_2048">2048</string>
    <string name="txt_tips">Join numbers to get 2048! </string>
    <string name="txt_new_game">New Game</string>
    <string name="txt_undo">Undo</string>

</resources>