<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_2048"
            android:textColor="#776E65"
            android:textSize="40sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/ll_current"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:background="#bbada0"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/current_score"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_currenScore"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/txt_zero"
                    android:textColor="#FFFFFF"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_best"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="#bbada0"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/best_score"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_bestScore"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/txt_zero"
                    android:textColor="#FFFFFF"
                    android:textSize="25sp"
                    android:textStyle="bold" >
                </TextView>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/txt_tips"
            android:textSize="17sp" >
        </TextView>

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="#8f7a66"
            android:minHeight="36dp"
            android:minWidth="90dp"
            android:onClick="onNewGameClick"
            android:text="@string/txt_new_game"
            android:textColor="#ffffff"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="#8f7a66"
            android:minHeight="36dp"
            android:minWidth="90dp"
            android:onClick="onUndoClick"
            android:text="@string/txt_undo"
            android:textColor="#ffffff"
            android:textSize="16sp" />
    </RelativeLayout>

    <com.app.v2048.TileGrid
        android:id="@+id/tile_grid"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="20dp"
        android:background="@color/default_bg_color" >
    </com.app.v2048.TileGrid>

</LinearLayout>